<resources>
    <string name="app_name">tipCalc</string>
    <string name="billTotal">Bill Total</string>
    <string name="zero">0.00</string>
    <string name="tenPercent">10%</string>
    <string name="fifteenPercent">15%</string>
    <string name="eighteenPercent">18%</string>
    <string name="twentyPercent">20%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">custom</string>
</resources>
